--- a/assets/styles/scss/abstracts/themes/_light--alt-output.scss
+++ b/assets/styles/scss/abstracts/themes/_light--alt-output.scss
@@ -1,5 +1,13 @@
+/* -------------------------------------------------------------------------- *\
+// *  <<--------------------<< LIGHT ALT >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
+/* -------------------------------------------------------------------------- *\
+// -  <<--------------------<< VISUAL >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
 :root,
-[data-theme='light--v2'] {
+[data-theme='light--alt'] {
   /* - ----------------------------------------------------------------------- */
 
   /* - <<--------------------<< TRANSPARANT BG COLORS >>-------------------->> */
