--- a/assets/styles/scss/abstracts/themes/_light--alt.scss
+++ b/assets/styles/scss/abstracts/themes/_light--alt.scss
@@ -1,13 +1,9 @@
 /* -------------------------------------------------------------------------- *\
-// *  <<--------------------<< LIGHT V2 >>-------------------->>
-\* -------------------------------------------------------------------------- */
-
-/* -------------------------------------------------------------------------- *\
-// -  <<--------------------<< VISUAL >>-------------------->>
+// *  <<--------------------<< LIGHT ALT >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
 :root,
-[data-theme='light--v2'] {
+[data-theme='light--alt'] {
   /* - ----------------------------------------------------------------------- */
 
   /* - <<--------------------<< TRANSPARANT BG COLORS >>-------------------->> */
