development-main: nuxt.config.js fixed

--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -7,6 +7,7 @@
 // -  <---------------| BOX MODEL: Content - Width - Height |--------------->
 
 // #  Large Static Values
+$large-dimension--xxXs: 160px; // 10rem
 $large-dimension--xxs: 320px; // 20rem
 $large-dimension--xs: 640px; // 40rem
 $large-dimension--s: 960px; // 60rem
@@ -173,10 +174,12 @@ $caption--box-shadow---slide-out: 0 19px 38px 20px rgba(0, 0, 0, 0.3),
 $linear-gradient--primary: hsla(207, 95%, 16%, 0.5);
 $linear-gradient--secondary: hsla(215, 44%, 49%, 0.5);
 $linear-gradient--tertiary: hsla(35, 45%, 50%, 0.5);
-$linear-gradient--combo: linear-gradient(-45deg,
-$linear-gradient--primary,
-$linear-gradient--secondary,
-$linear-gradient--tertiary);
+$linear-gradient--combo: linear-gradient(
+  -45deg,
+  $linear-gradient--primary,
+  $linear-gradient--secondary,
+  $linear-gradient--tertiary
+);
 
 // #  Radial-Gradient
 $radial-gradient--foreground: radial-gradient(#003, #000);
