--- a/assets/styles/scss/abstracts/mixins/_animations.scss
+++ b/assets/styles/scss/abstracts/mixins/_animations.scss
@@ -18,3 +18,39 @@
     background-position: 50% 0%;
   }
 }
+
+// *  <<--------------------<< SPINNERS >>-------------------->>
+@mixin spinkit-bounce {
+  .sk-bounce {
+    width: $small-dimension--xl;
+    height: $small-dimension--xl;
+    position: relative;
+  }
+
+  .sk-bounce-dot {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: sk-bounce 2s infinite cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  }
+
+  .sk-bounce-dot:nth-child(2) {
+    animation-delay: -1s;
+  }
+
+  @keyframes sk-bounce {
+    0%,
+    100% {
+      transform: scale(0);
+    }
+    45%,
+    55% {
+      transform: scale(1);
+    }
+  }
+}
