--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -27,31 +27,14 @@
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 4 - `layout/`
 \* ========================================================================== */
-@import 'components/layout/webshop/l-home-webshop';
-@import 'components/layout/webshop/l-store';
-@import 'components/layout/webshop/l-custom-work';
-@import 'components/layout/webshop/l-shopping-cart';
-@import 'components/layout/restoration/l-home-restoration';
-@import 'components/layout/restoration/l-methodology';
-@import 'components/layout/restoration/l-workshops';
-@import 'components/layout/restoration/l-contact';
-@import 'components/layout/accounts/l-sign-up';
-@import 'components/layout/accounts/l-login';
-@import 'components/layout/accounts/l-profile';
+// @import 'layout/l-home-webshop';
 
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 5 - `components/`
 \* ========================================================================== */
-@import 'components/c-card';
-@import 'components/c-icon';
-@import 'components/c-button';
-@import 'components/c-box-border';
-@import 'components/c-main-logo';
-@import 'components/c-main-header';
-@import 'components/c-product-item';
-@import 'components/c-shopping-cart-item';
-@import 'components/c-workshop-item';
-@import 'components/c-main-footer';
+
+// @import 'components/c-main-header';
+// @import 'components/c-main-footer';
 
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 6 - `pages/`
